--- a/public/css/main.css
+++ b/public/css/main.css
@@ -31,10 +31,20 @@ a{
   height: 130px;
   border-radius: 130px;
   box-shadow: rgba(0, 0, 0, 0.15) 4px 4px 6px;
+  cursor: pointer;
+  z-index: 0;
 }
 
+.label {
+  z-index: 10000;
+}
+
+/* input {
+  display: none;
+} */
+
 .main--imgprofile{
-  width: 100px;b
+  width: 100px;
   height: 100px;
   border-radius: 100px;
   box-shadow: rgba(0, 0, 0, 0.15) 4px 4px 6px;
@@ -46,7 +56,7 @@ a{
   height: 132px;
   border-radius: 132px;
   box-shadow: rgba(0, 0, 0, 0.15) 4px 4px 6px;
-  opacity: 0.9;
+  opacity: 0.6;
 }
 
 
