--- a/public/views/userprofile.ejs
+++ b/public/views/userprofile.ejs
@@ -143,10 +143,11 @@
                           
                                 <div class="col-sm-10 col-lg-5 ">
                                   <div class="mt-2 d-flex justify-content-center ">
-                                    <form method="post" action="/user" enctype="multipart/form-data">
+                                    <form method="post" action="/profile" enctype="multipart/form-data">
                                     <label for="file">
                                       <img id="output" class="imgprofile " src="../images/pic-ex.jpg">
-                                      <input id="file" name="image" type="file" onchange="loadFile(event)"/>
+                                      <input style="display: none;" id="file" name="image" type="file" onchange="loadFile(event)" required/>
+                                      <input type="submit" value="upload">
                                     </label>
                                   </form>
                                   </div>
