--- a/public/views/main_student.ejs
+++ b/public/views/main_student.ejs
@@ -80,7 +80,7 @@
           </div>
           <div class="d-flex">
             <p class="fw-bold me-3">วิชาโท : </p>   
-            <p>วิชาโทการจัดการธุรกิจไซเบอร์</p>
+            <p>การจัดการธุรกิจไซเบอร์</p>
           </div>
          
           <div class="d-flex">
