--- a/public/views/details_submit.ejs
+++ b/public/views/details_submit.ejs
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="../js/main.js">
     <link rel="stylesheet" href="../css/activity.css">
+    <link rel="stylesheet" href="../css/sub-detail.css">
 
 </head>
 <body id="main" class="bg-building">
@@ -256,16 +257,35 @@
   
     </div>
   <!-- //////   -->
+<!-- Trigger the Modal -->
+<!-- <img id="myImg" src="../img/file-1649178654049.png" alt="Snow" style="width:100%;max-width:300px"> -->
+
+
     <div class="mb-1">
       <label for="formFile" class="form-label">แนบภาพถ่ายระหว่างเข้าร่วมกิจกรรม/โครงการ * </label>
-
-  <u><a href="" style="color: #032c8a;">คลิ๊กดูรูป</a></u>
+  <u><a href="#" style="color: #032c8a;">คลิกดูรูป</a></u>
    </div>
 
+   <img id="myImg" src="<%= data[0].file_img %>" alt="Snow" style="width:100%; max-width:300px">
+   
+   <!-- The Modal -->
+ <div id="myModal" class="modal">
+
+  <!-- The Close Button -->
+  <span class="close">&times;</span>
+
+  <!-- Modal Content (The Image) -->
+  <img class="modal-content" id="img01">
+
+  <!-- Modal Caption (Image Text) -->
+  <div id="caption"></div>
+
+  <!-- ///////// this-->
+</div>
 
     <div class="mb-1">
       <label for="formFile" class="form-label">แนบกำหนดการ หรือเอกสารที่รับรองเข้าร่วมกิจกรรม/โครงการ *</label>
-      <u><a href="#"  target="_blank" style="color: #032c8a; ">คลิ๊กดูรูป</a></u>
+      <u><a href="<%= data[0].file_pdf %>" target="_blank" style="color: #032c8a;">คลิกดูเอกสาร</a></u>
     </div>
 
                 </div>
@@ -331,8 +351,26 @@ e.target.style.setProperty('--y', y + 'px');
           document.getElementById("main").style.marginLeft= "0";
         }
 
-              
-       
+      // Get the modal
+        var modal = document.getElementById("myModal");
+
+        // Get the image and insert it inside the modal - use its "alt" text as a caption
+        var img = document.getElementById("myImg");
+        var modalImg = document.getElementById("img01");
+        var captionText = document.getElementById("caption");
+        img.onclick = function(){
+          modal.style.display = "block";
+          modalImg.src = img.src;
+          captionText.innerHTML = img.alt;
+        }
+
+        // Get the <span> element that closes the modal
+        var span = document.getElementsByClassName("close")[0];
+
+        // When the user clicks on <span> (x), close the modal
+        span.onclick = function() {
+          modal.style.display = "none";
+        }     
         </script>
 </body>
 
